--- a/YoCars/yo_cars_client/src/components/homePage/intro/intro.module.css
+++ b/YoCars/yo_cars_client/src/components/homePage/intro/intro.module.css
@@ -70,6 +70,12 @@
     font-weight: 500;
     line-height: 28px;
     color: #212528;
+    border-radius: 4px;
+    border: none;
+}
+
+.searchCarBtn:hover {
+    cursor: pointer;
 }
 
 .benefitItem {
@@ -83,4 +89,14 @@
     font-weight: 400;
     line-height: 24px;
     text-align: left;
+}
+
+.benefitItem:last-child {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.benefitItem:last-child .benefitImage {
+    padding-left: 30px;
 }
