contacts + footer (верстка)

--- a/YoCars/yo_cars_client/src/components/homePage/autopark/autopark.module.css
+++ b/YoCars/yo_cars_client/src/components/homePage/autopark/autopark.module.css
@@ -2,7 +2,7 @@
     height: 844px;
 }
 .tytle {
-    margin-top: 94px;
+    padding-top: 94px;
     color: #F5F5F5;
     font-family: Montserrat;
     font-size: 35px;
