--- a/YoCars/yo_cars_client/src/components/header/header.module.css
+++ b/YoCars/yo_cars_client/src/components/header/header.module.css
@@ -32,7 +32,7 @@
     font-weight: 500;
 }
 .headerListText:hover{
-    color:#595757;
+    color:#a3a3a3;
 }
 .headerList:hover {
     cursor: pointer;
