--- a/YoCars/yo_cars_client/src/components/footer/footer.module.css
+++ b/YoCars/yo_cars_client/src/components/footer/footer.module.css
@@ -1,9 +1,14 @@
+.container {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
 .footer {
     display: flex;
     align-items: center;
-    justify-content: center;
-    gap: 215px;
-    width: auto;
+    justify-content: space-between;
+    width: 1400px;
     height: 128px;
 }
 
