--- a/YoCars/yo_cars_client/src/components/privateOffice/office/office.module.css
+++ b/YoCars/yo_cars_client/src/components/privateOffice/office/office.module.css
@@ -1,12 +1,7 @@
 .content {
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    height: 743px;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+    flex-direction: column;
+    width: 1400px;
 }
 .menu{
     width: 360px;
@@ -56,4 +51,10 @@
 }
 .menuButton:active{
     background-color: #5A5C5E;
+}
+
+.container {
+    display: flex;
+    width: 100%;
+    justify-content: center;
 }
