--- a/YoCars/yo_cars_client/src/components/footer/footer.module.css
+++ b/YoCars/yo_cars_client/src/components/footer/footer.module.css
@@ -1,6 +1,8 @@
 .container {
     display: flex;
     justify-content: center;
+    flex: 1 0 auto;
+    align-items: flex-end;
     width: 100%;
 }
 
