сделал бургер меню и лк
сделал бургер меню, переверстал лк, сверстал мои данные и историю бронирований сделал их переключение

--- a/yo_drive_client/src/components/footer/footer.module.css
+++ b/yo_drive_client/src/components/footer/footer.module.css
@@ -4,6 +4,7 @@
     flex: 1 0 auto;
     align-items: flex-end;
     width: 100%;
+    align-items: center;
 }
 
 .footer {
@@ -38,6 +39,7 @@
 
 .footerLink{
     text-decoration: underline;
+    padding-right: 22px;
 }
 
 .footerLink:hover{
