--- a/yo_drive_client/src/components/header/header.module.css
+++ b/yo_drive_client/src/components/header/header.module.css
@@ -37,3 +37,34 @@
 .headerList:hover {
     cursor: pointer;
 }
+.headerMenu{
+    position: absolute;
+    margin-top: 202px;
+    margin-left: 7px;
+    display: flex;
+    flex-direction: column;
+    width: 140px;
+    height: 254px;
+}
+.menuItem{
+    padding-top: 16px;
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
+}
+.headerListIcon_Exit{
+    width: 24px;
+    height: 24px;
+}
+.menuItem{
+    background-color: transparent;
+    border: none;
+    font-family: Montserrat;
+    font-size: 16px;
+    font-weight: 300;
+    color:#f5f5f5;
+    text-align: left;
+}
+.menuItem:hover{
+    color: #a3a3a3;
+}
