--- a/yo_drive_client/src/components/privateOffice/office/office.module.css
+++ b/yo_drive_client/src/components/privateOffice/office/office.module.css
@@ -4,12 +4,14 @@
     width: 1400px;
 }
 .mainPart {
-    margin-top: 58px;
+    margin-top: 29px;
     width: 1400px;
+    display: flex;
+    flex-direction: row;
 }
 .menu{
     width: 360px;
-    height: 628px;
+    height: 500px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -60,4 +62,194 @@
     display: flex;
     width: 100%;
     justify-content: center;
+}
+.info{
+    width: 924px;
+    height: 518px;
+    color:#f5f5f5;
+    font-family: Montserrat;
+    display: flex;
+    flex-direction: column;
+    padding-left: 82px;
+}
+.infoHeader{
+    text-align: left;
+    font-size: 36px;
+    font-weight: 500;
+}
+.infoText{
+    padding-top: 19px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 841px;
+    height: 184px;
+    text-align: left;
+    align-items: stretch;
+    gap: 20px;
+}
+.infoName{
+    padding-right: 150px;
+}
+.name{
+    font-size: 22px;
+    font-weight: 400;
+    padding-bottom: 15px;
+}
+.infoName_phone{
+    padding-right: 128px;
+}
+.nameInfo{
+    font-size: 18px;
+    font-weight: 300;
+}
+.buttons{
+    margin-top: 222px;
+    width: 941px;
+    height: 51px;
+    display: flex;
+    flex-direction: row;
+    align-items:stretch;
+    gap: 72px;
+}
+.buttonEdit{
+    width: 321px;
+    height: 50px;
+    background-color: #d9d9d9;
+    border: none;
+    font-family: Montserrat;
+    font-size: 20px;
+    font-weight: 300;
+    color: #212528;
+}
+.buttonEdit:hover{
+    cursor: pointer;
+    color:#d9d9d9;
+    background-color: transparent;
+    border: solid;
+    border-color: #d9d9d9;
+    border-width: 1px;
+}
+.buttonImg{
+    background-color: #212528;
+    border: none;
+    font-family: Montserrat;
+    font-size: 20px;
+    font-weight: 300;
+    color: #d9d9d9;
+    width: 250px;
+}
+.buttonImg:hover{
+    cursor: pointer;
+    color: #ffffff;
+}
+.buttonDelete{
+    width: 220px;
+    font-family: Montserrat;
+    font-size: 20px;
+    font-weight: 300;
+    color: #d9d9d9;
+    border-style: solid;
+    border-color: #d9d9d9;
+    border-radius: 2px;
+    border-width: 1px;
+    background-color: transparent;
+}
+.buttonDelete:hover{
+    color: #212528;
+    background-color: #d9d9d9;
+    cursor: pointer;
+}
+.headerBlock{
+    display: flex;
+    flex-direction: row;
+    align-content: space-between;
+    width: 942px;
+}
+.calendar{
+    display: flex;
+    flex-direction: row;
+    margin-left: 252px;
+}
+.calendar:hover{
+    cursor: pointer;
+}
+.calendarIcon{
+    gap: 20px;
+    width: 21px;
+    height: 30px;
+    margin-top: 17px;
+    margin-right: 5px;
+}
+.calendarText{
+    padding-top: 7px;
+    font-size: 30px;
+    font-weight: 300;
+}
+.infoStory{
+    display: flex;
+    flex-direction: column;
+}
+.storyHeaders{
+    margin-top: 32px;
+    margin-left: 28px;
+    display: flex;
+    flex-direction: row;
+    width: 841px;
+    column-gap: 110px;
+}
+.storyHeader{
+    font-family: Montserrat;
+    font-size: 14px;
+    align-items: center;
+    justify-content: space-between;
+}
+.storyHeader_rewiev{
+    margin-left: 57px;
+}
+.storyBlock{
+    width: 942px;
+    height: 60px;
+    background-color: #d9d9d9;
+    border-radius: 2;
+    margin-top: 15px;
+    margin-left: 4px;
+    display: flex;
+    flex-direction: row;
+    padding-top: 22px;
+    padding-left: 22px;
+    font-family: Montserrat;
+    color: #212528;
+    font-size: 14px;
+}
+.blockText_first{
+    margin-right: 24px;
+}
+.blockText_second{
+    margin-right: 119px;
+}
+.blockText_third{
+    margin-right: 90px;
+}
+.blockText_fourth{
+    margin-right: 41px;
+}
+.blockText_rewiev{
+    display: flex;
+    flex-direction: row;
+    align-items: space-between;
+}
+.rewiev_star{
+    width: 22px;
+    height: 21px;
+    margin-right: 10px;
+    padding-bottom: 4px;
+}
+.rewiev_icon{
+    width: 15px;
+    height: 15px;
+    margin-left: 10px;
+}
+.rewiev_icon:hover{
+    cursor: pointer;
 }
