--- a/yo_drive_client/src/components/header/header.module.css
+++ b/yo_drive_client/src/components/header/header.module.css
@@ -30,6 +30,7 @@
     font-family: Montserrat;
     font-size: 16px;
     font-weight: 500;
+    margin-left: 1px;
 }
 .headerListText:hover{
     color:#a3a3a3;
@@ -39,31 +40,32 @@
 }
 .headerMenu{
     position: absolute;
-    margin-top: 202px;
-    margin-left: 7px;
+    margin-top: 672px;
+    padding: 11px 12px 8px 0;
     display: flex;
     flex-direction: column;
-    width: 140px;
-    height: 254px;
+    width: 153px;
+    height: 747px;
+    background-color: #212528;
 }
 .menuItem{
-    padding-top: 16px;
+    padding-top: 17px;
     display: flex;
     flex-direction: row;
-    gap: 15px;
+    gap: 17px;
 }
 .headerListIcon_Exit{
-    width: 24px;
-    height: 24px;
+    width: 27px;
+    height: 25px;
 }
 .menuItem{
-    background-color: transparent;
     border: none;
     font-family: Montserrat;
     font-size: 16px;
     font-weight: 300;
     color:#f5f5f5;
     text-align: left;
+    margin-left: 2px;
 }
 .menuItem:hover{
     color: #a3a3a3;
