--- a/yo_drive_client/src/components/privateOffice/office/office.module.css
+++ b/yo_drive_client/src/components/privateOffice/office/office.module.css
@@ -24,6 +24,12 @@
     display: flex;
     flex-direction: column;
 }
+.headRole{
+    font-family: Montserrat;
+    color: #f5f5f5;
+    font-weight: 400;
+    font-size: 17px;
+}
 .headIcon{
     width: 92px;
     padding-top: 59px;
@@ -64,7 +70,7 @@
     justify-content: center;
 }
 .info{
-    width: 924px;
+    width: 1020px;
     height: 518px;
     color:#f5f5f5;
     font-family: Montserrat;
@@ -144,7 +150,7 @@
     color: #ffffff;
 }
 .buttonDelete{
-    width: 220px;
+    width: 222px;
     font-family: Montserrat;
     font-size: 20px;
     font-weight: 300;
@@ -160,96 +166,68 @@
     background-color: #d9d9d9;
     cursor: pointer;
 }
-.headerBlock{
+.headerButtons{
     display: flex;
     flex-direction: row;
-    align-content: space-between;
-    width: 942px;
+    margin-top: 37px;
 }
-.calendar{
-    display: flex;
-    flex-direction: row;
-    margin-left: 252px;
+.buttonPrewiev{
+    width: 315px;
+    height: 50px;
+    font-family: Montserrat;
+    font-size: 20px;
+    font-weight: 300;
+    color: #d9d9d9;
+    border-style: solid;
+    border-color: #d9d9d9;
+    border-radius: 2px;
+    border-width: 1px;
+    background-color: transparent;
 }
-.calendar:hover{
+.buttonPrewiev:hover{
     cursor: pointer;
 }
-.calendarIcon{
-    gap: 20px;
-    width: 21px;
-    height: 30px;
-    margin-top: 17px;
-    margin-right: 5px;
+.filter{
+    display: flex;
+    flex-direction: row;
+    width: 159px;
+    height: 50px;
+    margin-left: 40px;
+    margin-right: 226px;
 }
-.calendarText{
-    padding-top: 7px;
-    font-size: 30px;
+.filter:hover{
+    cursor: pointer;
+}
+.filterImg{
+    width: 30px;
+    padding-right: 5px;
+}
+.filterButton{
+    background-color: transparent;
+    border: none;
+    font-family: Montserrat;
+    font-size: 20px;
+    color: #d9d9d9;
     font-weight: 300;
 }
-.infoStory{
-    display: flex;
-    flex-direction: column;
+.filterButton:hover{
+    cursor: pointer;
 }
-.storyHeaders{
-    margin-top: 32px;
-    margin-left: 28px;
-    display: flex;
-    flex-direction: row;
-    width: 841px;
-    column-gap: 110px;
-}
-.storyHeader{
-    font-family: Montserrat;
-    font-size: 14px;
-    align-items: center;
-    justify-content: space-between;
-}
-.storyHeader_rewiev{
-    margin-left: 57px;
-}
-.storyBlock{
-    width: 942px;
-    height: 60px;
+.buttonAdd{
+    width: 197px;
+    height: 50px;
     background-color: #d9d9d9;
-    border-radius: 2;
-    margin-top: 15px;
-    margin-left: 4px;
-    display: flex;
-    flex-direction: row;
-    padding-top: 22px;
-    padding-left: 22px;
     font-family: Montserrat;
+    font-size: 20px;
     color: #212528;
-    font-size: 14px;
+    font-weight: 300;
+    border: none;
 }
-.blockText_first{
-    margin-right: 24px;
-}
-.blockText_second{
-    margin-right: 119px;
-}
-.blockText_third{
-    margin-right: 90px;
-}
-.blockText_fourth{
-    margin-right: 41px;
-}
-.blockText_rewiev{
-    display: flex;
-    flex-direction: row;
-    align-items: space-between;
-}
-.rewiev_star{
-    width: 22px;
-    height: 21px;
-    margin-right: 10px;
-    padding-bottom: 4px;
-}
-.rewiev_icon{
-    width: 15px;
-    height: 15px;
-    margin-left: 10px;
-}
-.rewiev_icon:hover{
+.buttonAdd:hover{
+    background-color: #212528;
+    color: #d9d9d9;
+    border: #d9d9d9;
+    border-style: solid;
+    border-width: 1px;
     cursor: pointer;
 }
