--- a/yo_drive_client/src/components/privateOffice/office/add.module.css
+++ b/yo_drive_client/src/components/privateOffice/office/add.module.css
@@ -1,5 +1,93 @@
 .addBlock{
-     width: 920px;
-     /* width: 300px;
-     background-color: aliceblue; */
+     width: 937px;
+     height: 335px;
+     margin-top: 34px;
+     background-color: #d9d9d9; 
+     display: flex;
+     flex-direction: row;
+}
+.imgSpace{
+     width: 273px;
+     height: 238px;
+     border: solid;
+     border-color: #212528;
+     border-width: 1px;
+     border-radius: 2px;
+     margin: 22px 0 0 42px;
+}
+.spaceIcon{
+     margin-top: 58px;
+}
+.imgButton{
+     margin-top: 11px;
+     margin-left: 42px;
+     width: 273px;
+     height: 48px;
+     background-color: #212528;
+     font-family: Montserrat;
+     font-size: 18px;
+     color: #f5f5f5;
+     font-weight: 300;
+     border: none;
+}
+.blockInfo{
+     margin: 22px 0 0 69px;
+     height: 296px;
+     width: 525px;
+     display: flex;
+     flex-direction: column;
+     /* background-color: aqua; */
+}
+.infoItem{
+     display: flex;
+     flex-direction: row;
+     justify-content: space-between;
+     margin-bottom: 12px;
+}
+.itemName{
+     font-family: Montserrat;
+     font-size: 19px;
+     font-weight: 400px;
+     color: #212528
+}
+.itemInput{
+     width: 256px;
+     height: 28px;
+     background-color: transparent;
+     border: none;
+     border-bottom: solid;
+     border-width: 1px;
+     border-color: #212528;
+     list-style-type: "D:\Course_Work\yo_drive_client\src\assets";
+     font-family: Montserrat;
+     font-size: 18px;
+     font-weight: 300;
+}
+.listItem{
+     padding-left: 20px;
+}
+.infoButtons{
+     display: flex;
+     flex-direction: row;
+     margin: 9px 0 0 262px;
+}
+.buttonCancel{
+     width: 118px;
+     height: 48px;
+     background-color: transparent;
+     font-family: Montserrat;
+     font-size: 18px;
+     font-weight: 300;
+     color: #212528;
+     border: none;
+}
+.buttonSave{
+     width: 146px;
+     height: 48px;
+     background-color: #212528;
+     font-family: Montserrat;
+     font-size: 18px;
+     font-weight: 300;
+     color: #d9d9d9;
+     border: none;
 }
