--- a/yo_drive_client/src/components/privateOffice/office/story.module.css
+++ b/yo_drive_client/src/components/privateOffice/office/story.module.css
@@ -10,13 +10,15 @@
 .headerBlock{
     display: flex;
     flex-direction: row;
-    align-content: space-between;
-    width: 942px;
+    justify-content: space-between;
+    width: 939px;
 }
 .calendar{
     display: flex;
     flex-direction: row;
     margin-left: 252px;
+    background-color: transparent;
+    border: none;
 }
 .calendar:hover{
     cursor: pointer;
@@ -29,6 +31,8 @@
     margin-right: 5px;
 }
 .calendarText{
+    font-family: Montserrat;
+    color: #f5f5f5;
     padding-top: 7px;
     font-size: 30px;
     font-weight: 300;
@@ -39,52 +43,50 @@
 }
 .storyHeaders{
     margin-top: 32px;
-    margin-left: 28px;
+    padding: 0 28px 0 25px;
     display: flex;
     flex-direction: row;
-    width: 841px;
-    column-gap: 110px;
-}
-.storyHeader{
-    font-family: Montserrat;
-    font-size: 14px;
+    width: 935px;
     align-items: center;
     justify-content: space-between;
-}
-.storyHeader_rewiev{
-    margin-left: 57px;
+    font-family: Montserrat;
+    font-size: 14px;
+    text-align: left;
 }
 .storyBlock{
-    width: 933px;
+    width: 935px;
     height: 60px;
     background-color: #d9d9d9;
     border-radius: 2;
-    margin-top: 15px;
-    margin-left: 4px;
+    margin: 15px 3px 25px 3px;
     display: flex;
     flex-direction: row;
-    padding-top: 22px;
-    padding-left: 22px;
+    padding: 0 30px 0 22px;
     font-family: Montserrat;
     color: #212528;
     font-size: 14px;
+    text-align: left;
+    justify-content: space-between;
+    align-items: center;
 }
-.blockText_first{
-    margin-right: 24px;
+.blockText_first,.storyHeader_auto{
+    width: 186px;
 }
-.blockText_second{
-    margin-right: 119px;
+.blockText_second,.storyHeader_price{
+    width: 150px;
 }
-.blockText_third{
-    margin-right: 90px;
+.blockText_third,.storyHeader_total{
+    width: 100px;
 }
-.blockText_fourth{
-    margin-right: 41px;
+.blockText_fourth,.storyHeader_date{
+    width: 185px;
 }
-.blockText_rewiev{
+.blockText_rewiev,.storyHeader_rewiev{
     display: flex;
     flex-direction: row;
     align-items: space-between;
+    width: 80px;
+    text-align: left;
 }
 .rewiev_star{
     width: 22px;
