--- a/yo_drive_client/src/components/authorization/login.module.css
+++ b/yo_drive_client/src/components/authorization/login.module.css
@@ -1,75 +1,77 @@
 .container {
     display: flex;
-    height: calc(100vh - 128px);
+    height: calc(100vh - 220px);
     width: 100%;
     align-items: center;
     justify-content: center;
 }
 
-.inputContainer {
-    height: 200px;
+.registrationForm{
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-}
-
-.authBox {
-    display: flex;
-    flex-direction: column;
-    color: #F5F5F5;
-    width: 559px;
-    height: 320px;
     align-items: center;
-    justify-content: center;
 }
-
-.title {
+.registrationTitle{
     font-family: Montserrat;
+    color: #f5f5f5;
     font-size: 32px;
-    font-weight: 600;
-    line-height: 39px;
 }
-
-.form {
+.registrationItem{
     display: flex;
     flex-direction: column;
-    width: 400px;
-}
-
-.inputForm {
-    width: 400px;
-    height: 33px;
-}
-
-.inputText {
-    margin-bottom: 6px;
-}
-
-.buttons {
-    display: flex;
-    margin-top: 20px;
-    width: 400px;
-    justify-content: flex-end;
-    gap: 25px;
-}
-
-.registerBtn {
-    color: #f5f5f5;
     font-family: Montserrat;
     font-size: 16px;
-    font-weight: 500;
-    line-height: 20px;
-    background-color: transparent;
+    color: #f5f5f5;
+}
+.itemInput{
+    margin-top: 5px;
+    padding-left: 10px;
+    width: 400px;
+    height: 32px;
+    background-color: #f5f5f5;
     border: none;
+    font-family: Montserrat;
+    font-size: 18px;
 }
-
-.enterBtn {
+.itemError{
+    font-family: Montserrat;
+    font-size: 12px;
+    color: #b42121;
+    margin-top: 5px;
+}
+.loginButton{
+    width: 120px;
+    height: 33px;
+    background-color: transparent;
+    color: #f5f5f5;
+    border: solid;
+    border-color: #f5f5f5;
+    border-width: 1px;
+    font-family: Montserrat;
+    font-size: 16px;
+    font-weight: 400;
+}
+.loginButton:hover{
+    border: none;
+    background-color: #f5f5f5;
+    color: #212528;
+}
+.registrationButtons{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    margin-top: 20px;
+}
+.buttonRegistration{
+    height: 31px;
+    background-color: transparent;
     color: #f5f5f5;
     font-family: Montserrat;
     font-size: 16px;
-    font-weight: 500;
-    line-height: 20px;
-    background-color: transparent;
-    border: 1px solid #F5F5F5;
-    padding: 5px 38px;
+    margin-right: 20px;
+    border: none;
+    font-weight: 400;
+}
+.buttonRegistration:hover{
+    font-weight: 600;
 }
