--- a/yo_drive_client/src/components/registration/registration.module.css
+++ b/yo_drive_client/src/components/registration/registration.module.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: calc(100vh - 210px);
 }
 .registrationTitle{
     font-family: Montserrat;
@@ -48,7 +49,7 @@
     background-color: #f5f5f5;
     color: #212528;
 }
-.registrationBittons{
+.registrationButtons{
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
