--- a/yo_drive_client/src/components/privateOffice/office/add.module.css
+++ b/yo_drive_client/src/components/privateOffice/office/add.module.css
@@ -6,6 +6,10 @@
      display: flex;
      flex-direction: row;
 }
+.blockImg{
+     display: flex;
+     flex-direction: column;
+}
 .imgSpace{
      width: 273px;
      height: 238px;
@@ -15,27 +19,12 @@
      border-radius: 2px;
      margin: 22px 0 0 42px;
 }
+.addForm{
+     display: flex;
+     flex-direction: row;
+}
 .spaceIcon{
      margin-top: 58px;
-}
-.imgButton{
-     margin-top: 11px;
-     margin-left: 42px;
-     width: 273px;
-     height: 48px;
-     background-color: #212528;
-     font-family: Montserrat;
-     font-size: 18px;
-     color: #f5f5f5;
-     font-weight: 300;
-     border: none;
-}
-.imgButton:hover{
-     color: #212528;
-     background-color: #d9d9d9;
-     border: solid;
-     border-width: 1px;
-     cursor: pointer;
 }
 .blockInfo{
      margin: 22px 0 0 69px;
@@ -108,4 +97,57 @@
      border: solid;
      border-width: 1px;
      cursor: pointer;
+}
+.inputImg{
+     width: 0.1px;
+     height: 0.1px;
+     opacity: 0;
+     overflow: hidden;
+     position: absolute;
+     z-index: -1;
+}
+.inputImg + label {
+     font-size: 18px;
+     font-weight: 300;
+     color: #d9d9d9;
+     background-color: #212528;
+     width: 273px;
+     height: 48px;
+     margin-left: 42px;
+     margin-top: 10px;
+     padding-top: 12px;
+}
+.inputImg + label:hover {
+     background-color: #d9d9d9;
+     color: #212528;
+     border: solid;
+     border-color: #212528;
+     border-radius: 2;
+     border-width: 1px;
+}
+input{
+     background: url("../../../assets/galochka.svg") 220px  no-repeat;
+}
+input:focus{
+     background: url("../../../assets/galochka2.svg") 220px  no-repeat;
+}
+input::-webkit-calendar-picker-indicator {
+     display: none !important;
+}
+.itemInputPrice{
+     width: 256px;
+     height: 28px;
+     background-color: transparent;
+     border: none;
+     border-bottom: solid;
+     border-width: 1px;
+     border-color: #212528;
+     font-family: Montserrat;
+     font-size: 18px;
+     font-weight: 300;
+     padding-left: 16px;
+     background: none;
+}
+.itemInputPrice:focus{
+     background: none;
 }
