правки по верстке

--- a/yo_drive_client/src/components/authorization/login.module.css
+++ b/yo_drive_client/src/components/authorization/login.module.css
@@ -1,6 +1,11 @@
 .container {
     display: flex;
-    height: calc(100vh - 220px);
+    flex-direction: column;
+    width: 100%;
+}
+.content {
+    display: flex;
+    height: calc(85vh - 128px);
     width: 100%;
     align-items: center;
     justify-content: center;
