--- a/yo_drive_client/src/components/header/header.module.css
+++ b/yo_drive_client/src/components/header/header.module.css
@@ -1,19 +1,20 @@
 .header {
     display: flex;
-    min-width: 1400px;
+    width: 100%;
+    justify-content: center;
 }
 .headerMenuList {
     display: flex;
     max-width: 1400px;
     height: 80px;
     align-items: center;
-    gap: 252px;
+    gap: 260px;
 }
 .headerList {
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 15px;
+    gap: 14px;
 }
 .headerLogo {
     display: flex;
