--- a/yo_drive_client/src/components/registration/registration.module.css
+++ b/yo_drive_client/src/components/registration/registration.module.css
@@ -1,8 +1,19 @@
+.container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+.content {
+    display: flex;
+    height: calc(90vh - 128px);
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+}
 .registrationForm{
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: calc(100vh - 210px);
 }
 .registrationTitle{
     font-family: Montserrat;
