--- a/yo_drive_client/src/components/authorization/login.module.css
+++ b/yo_drive_client/src/components/authorization/login.module.css
@@ -2,11 +2,12 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    height: calc(100vh - 128px);
 }
 .content {
     display: flex;
-    height: calc(90vh - 128px);
     width: 100%;
+    height: 100%;
     align-items: center;
     justify-content: center;
 }
