--- a/yo_drive_client/src/components/registration/registration.module.css
+++ b/yo_drive_client/src/components/registration/registration.module.css
@@ -2,10 +2,11 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    height: calc(100vh - 128px);
 }
 .content {
     display: flex;
-    height: calc(87vh - 128px);
+    height: 100%;
     width: 100%;
     align-items: center;
     justify-content: center;
