--- a/yo_drive_client/src/App.css
+++ b/yo_drive_client/src/App.css
@@ -15,3 +15,50 @@ ul li {
   min-height: 100vh;
   height: 100%;
 }
+
+.swiper {
+  width: 1400px;
+  height: 550px;
+}
+
+.swiper-button-next, .swiper-button-prev
+{
+  color: #F5F5F5 !important;
+}
+
+.swiper-button-prev {
+  margin: 130px 0 0 442px !important;
+}
+
+.swiper-button-next {
+  margin: 130px 442px 0 0 !important;
+}
+
+.swiper-slide {
+  visibility: hidden;
+}
+
+.swiper-slide img {
+  width: 643px;
+  height: 279px;
+}
+
+.swiper-slide-prev, .swiper-slide-active, .swiper-slide-next {
+  visibility: visible;
+}
+
+.swiper-slide-prev p,
+.swiper-slide-next p {
+  visibility: hidden;
+}
+
+.swiper-slide-prev, .swiper-slide-next {
+  transition: transform 0.3s ease !important; 
+}
+
+.swiper-slide-active {
+  display: flex !important; 
+  flex-direction: column;
+  align-items: center;
+  transform: scale(0.9) translateY(70px) !important;
+}
