--- a/yo_drive_client/src/components/bookingPage/filterPanel/filterPanel.module.css
+++ b/yo_drive_client/src/components/bookingPage/filterPanel/filterPanel.module.css
@@ -139,7 +139,7 @@
     flex-direction: row;
     padding-left: 5px;
 }
-input[type='radio']:checked{
+.radioItem[type='radio']:checked{
     accent-color: #212528;
 }
 .inputBlock{
