--- a/yo_drive_client/src/components/registration/registration.module.css
+++ b/yo_drive_client/src/components/registration/registration.module.css
@@ -90,6 +90,6 @@
     flex-direction: row;
     margin-top: 2px;
 }
-input[type='checkbox']:checked{
+.checkbox[type='checkbox']:checked{
     accent-color: #212528;
 }
