внес правки можешь мержить

--- a/yo_drive_client/src/components/authorization/login.module.css
+++ b/yo_drive_client/src/components/authorization/login.module.css
@@ -91,6 +91,6 @@
     flex-direction: row;
     margin-top: 2px;
 }
-input[type='checkbox']:checked{
+.checkbox[type='checkbox']:checked{
     accent-color: #212528;
 }
