--- a/yo_drive_client/src/components/bookingPage/filterPanel/filterPanel.module.css
+++ b/yo_drive_client/src/components/bookingPage/filterPanel/filterPanel.module.css
@@ -48,10 +48,10 @@
     cursor: pointer;
 }
 .dropItem{
-    background: url("../../../assets/galochka.svg") 135px  no-repeat;
+    background: url("../../../assets/galochkaClose.svg") 135px  no-repeat;
 }
 .dropItem:focus{
-    background: url("../../../assets/galochka2.svg") 135px  no-repeat;
+    background: url("../../../assets/galochkaOpen.svg") 135px  no-repeat;
 }
 .dropItem::-webkit-calendar-picker-indicator {
     display: none !important;
@@ -62,7 +62,7 @@
     font-family: Montserrat;
     font-size: 22px;
     font-weight: 600;
-    color: #000;
+    color: #000000;
     border: none;
     background-color: transparent;
     width: 230px;
@@ -139,8 +139,21 @@
     flex-direction: row;
     padding-left: 5px;
 }
-.radioItem[type='radio']:checked{
-    accent-color: #212528;
+.checkboxItem[type='checkbox']{
+    margin-top: 7px;
+    width: 0.8em;
+    height: 0.8em;
+    background-color: #d9d9d9;
+    border-radius: 50%;
+    vertical-align: middle;
+    border: 1px solid #212528;
+    appearance: none;
+    -webkit-appearance: none;
+    outline: none;
+    cursor: pointer;
+}
+.checkboxItem[type='checkbox']:checked{
+    background-color: #212528;
 }
 .inputBlock{
     margin-left: 6px;
