--- a/yo_drive_client/src/components/bookingPage/bookingPage.module.css
+++ b/yo_drive_client/src/components/bookingPage/bookingPage.module.css
@@ -41,7 +41,6 @@
     line-height: 32px;
 }
 
-
 .catalogItem {
     display: flex;
     justify-content: space-around;
@@ -62,14 +61,14 @@
     margin-top: 17px;
 }
 
-.catalogItemInfo {
+.catalogItemInfo, .popupItemInfo {
     font-family: Montserrat;
     font-size: 16px;
     font-weight: 400;
     line-height: 20px;
 }
 
-.carName {
+.carName, .popupСarName {
     width: 353px;
     font-family: Montserrat;
     font-size: 26px;
@@ -95,13 +94,64 @@
     font-size: 16px;
     font-weight: 600;
     line-height: 20px;
+    cursor: pointer;
 }
 
 .carStars {
     margin: 6px 0 3px 0;
 }
 
-.carYear, .carBox, .carClass {
+.carYear, .carBox, .carClass, .popupСarYear, .popupСarBox, .popupСarClass, .popupDayCost {
     margin-top: 9px;
     color: #212528;
+}
+
+.popupItem {
+    display: flex;
+    justify-content: space-between;
+}
+
+.popupCarImg {
+    margin-top: 60px;
+}
+
+.popupСarName {
+    margin: 47px 0 14px 0;
+}
+
+.popupDateRangeText, .popupDateRange, .popupSumCost, .popupSumCost {
+    font-family: Montserrat;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
+}
+
+.popupBookingInfo {
+    margin-left: 10px;
+}
+
+.popupDateRange {
+    margin-top: 4px;
+}
+
+.popupHighlight {
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 20px;
+}
+
+.popupCarAdress {
+    margin-top: 10px;
+    text-decoration: underline;
+    text-underline-offset: 2px;
+}
+
+.popupSumCost {
+    margin: 15px 0;
+}
+
+.popupHighlightCost {
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 24px;
 }
