--- a/yo_drive_client/src/components/bookingPage/Popup/bookingPagePopup.module.css
+++ b/yo_drive_client/src/components/bookingPage/Popup/bookingPagePopup.module.css
@@ -12,7 +12,7 @@
   width: 819px;
   height: 592px;
   margin: 0 auto;
-  margin-top: calc(100vh - 85vh - 20px);
+  margin-top: calc(15vh - 20px);
   background: #D9D9D9;
   border-radius: 4px;
   padding: 14px 30px 30px 30px;
