--- a/yo_drive_client/src/components/bookingPage/bookingPage.module.css
+++ b/yo_drive_client/src/components/bookingPage/bookingPage.module.css
@@ -1,7 +1,8 @@
 .bookingPageContainer {
     display: flex;
-    flex-direction: column;
     align-items: center;
+    flex-direction: column;
+    min-height: calc(100vh - 128px);
 }
 
 .title {
