--- a/yo_drive_client/src/components/registration/registration.module.css
+++ b/yo_drive_client/src/components/registration/registration.module.css
@@ -1,6 +1,7 @@
 .container {
     display: flex;
     flex-direction: column;
+    align-items: center;
     width: 100%;
     height: calc(100vh - 128px);
 }
