--- a/yo_drive_client/src/components/authorization/login.module.css
+++ b/yo_drive_client/src/components/authorization/login.module.css
@@ -62,6 +62,7 @@
     border: none;
     background-color: #f5f5f5;
     color: #212528;
+    cursor: pointer;
 }
 .registrationButtons{
     display: flex;
@@ -81,6 +82,7 @@
 }
 .buttonRegistration:hover{
     font-weight: 600;
+    cursor: pointer;
 }
 .showPas{
     font-size: 13px;
@@ -94,4 +96,8 @@
 }
 .checkbox[type='checkbox']:checked{
     accent-color: #212528;
+}
+
+.checkbox:hover {
+    cursor: pointer;
 }
