--- a/yo_drive_client/src/App.css
+++ b/yo_drive_client/src/App.css
@@ -105,3 +105,8 @@ ul li {
 .rdrMonthAndYearWrapper {
   padding-top: 13px !important;
 }
+
+.rr--hf-svg-off, .rr--hf-svg-on {
+  stroke: #CCB746 !important;
+  stroke-width: 1 !important;
+}
