--- a/yo_drive_client/src/components/bookingPage/bookingPage.module.css
+++ b/yo_drive_client/src/components/bookingPage/bookingPage.module.css
@@ -84,6 +84,22 @@
     line-height: 29px;
 }
 
+.carStars {
+    display: flex;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    font-family: Montserrat;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 22px;
+}
+
+.carStarsNumber {
+    margin-left: 7px;
+    color: #212528;
+}
+
 .carButton {
     width: 247px;
     height: 38px;
