--- a/yo_drive_client/src/components/bookingPage/filterPanel/filterPanel.module.css
+++ b/yo_drive_client/src/components/bookingPage/filterPanel/filterPanel.module.css
@@ -150,17 +150,9 @@
     padding-left: 5px;
 }
 .checkboxItem[type='checkbox']{
-    margin-top: 7px;
-    width: 0.8em;
-    height: 0.8em;
-    background-color: #d9d9d9;
-    border-radius: 50%;
-    vertical-align: middle;
-    border: 1px solid #212528;
-    appearance: none;
-    -webkit-appearance: none;
-    outline: none;
-    cursor: pointer;
+    margin-top: 2px;
+    accent-color: #212528;
+    color: #D9D9D9;
 }
 .checkboxItem[type='checkbox']:checked{
     background-color: #212528;
