--- a/yo_drive_client/src/components/bookingPage/Popup/bookingPageFeedbackPopup.module.css
+++ b/yo_drive_client/src/components/bookingPage/Popup/bookingPageFeedbackPopup.module.css
@@ -1,43 +1,43 @@
 .popupBox {
-    position: fixed;
-    background: rgba(0, 0, 0, 0.3);
-    width: 100%;
-    height: 100vh;
-    top: 0;
-    left: 0;
-    /* z-index: 2; */
-  }
+  position: fixed;
+  background: rgba(0, 0, 0, 0.3);
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  z-index: 2;
+}
    
 .box {
-    position: relative;
-    width: 819px;
-    height: 642px;
-    margin: 0 auto;
-    margin-top: calc(15vh - 20px);
-    background: #D9D9D9;
-    border-radius: 4px;
-    padding: 8px 30px 30px 30px;
-    border: none;
-    overflow: auto;
-  }
+  position: relative;
+  width: 819px;
+  height: 642px;
+  margin: 0 auto;
+  margin-top: calc(15vh - 20px);
+  background: #D9D9D9;
+  border-radius: 4px;
+  padding: 8px 39px 39px 39px;
+  border: none;
+  overflow: auto;
+}
   
 .popupTitle {
-      text-align: center;
-      font-family: Montserrat;
-      font-size: 42px;
-      font-weight: 600;
-      line-height: 51px;
-  }
+  text-align: center;
+  font-family: Montserrat;
+  font-size: 42px;
+  font-weight: 600;
+  line-height: 51px;
+}
   
 .popupClose {
-    display: flex;
-    justify-content: flex-end;
-  }
+  display: flex;
+  justify-content: flex-end;
+}
    
 .popupCloseIcon {
-    content: 'x';
-    cursor: pointer;
-    font-size: 18px;
-    font-weight: 600;
-  }
+  content: 'x';
+  cursor: pointer;
+  font-size: 18px;
+  font-weight: 600;
+}
   
