--- a/yo_drive_client/src/components/privateOffice/office/prewiev.module.css
+++ b/yo_drive_client/src/components/privateOffice/office/prewiev.module.css
@@ -14,6 +14,7 @@
     background-color: #d9d9d9;
     display: flex;
     flex-direction: row;
+    margin-bottom: 20px;
 }
 .carImg{
     width: 391px;
@@ -49,7 +50,24 @@
 .infoRewiev{
     display: flex;
     flex-direction: row;
+    align-items: center;
+    height: 22px;
     margin-top: 2px;
+}
+.carStars {
+    display: flex;
+    margin: 6px 0 3px 0;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    font-family: Montserrat;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 22px;
+}
+.carStarsNumber {
+    margin-left: 7px;
+    color: #212528;
 }
 .rewievScore{
     font-weight: 400;
@@ -58,7 +76,7 @@
 }
 .rewievQuantity{
     font-size: 14px;
-    margin: 4px 0 0 10px;
+    margin: 0 0 0 10px;
     font-weight: 400;
     opacity: 0.8;
 }
