--- a/yo_drive_client/src/components/privateOffice/office/story.module.css
+++ b/yo_drive_client/src/components/privateOffice/office/story.module.css
@@ -58,7 +58,7 @@
     height: 60px;
     background-color: #d9d9d9;
     border-radius: 2;
-    margin: 15px 3px 25px 3px;
+    margin: 15px 3px 15px 3px;
     display: flex;
     flex-direction: row;
     padding: 0 30px 0 22px;
@@ -98,6 +98,9 @@
     width: 15px;
     height: 15px;
     margin-left: 10px;
+}
+.rewiev_digit{
+    width: 20px;
 }
 .rewiev_icon:hover{
     cursor: pointer;
@@ -178,4 +181,10 @@
     border: solid;
     border-width: 1px;
     border-color: #212528;
+}
+.listItems{
+    display: flex;
+    flex-direction: column;
+    height: 421px;
+    width: 935px;
 }
