--- a/yo_drive_client/src/components/privateOffice/office/office.module.css
+++ b/yo_drive_client/src/components/privateOffice/office/office.module.css
@@ -100,7 +100,7 @@
     gap: 20px;
 }
 .infoName{
-    padding-right: 150px;
+    margin-right: 110px;
 }
 .name{
     font-size: 22px;
@@ -108,11 +108,12 @@
     padding-bottom: 15px;
 }
 .infoName_phone{
-    padding-right: 128px;
+    padding-right: 110px;
 }
 .nameInfo{
     font-size: 18px;
     font-weight: 300;
+    width: 150px;
 }
 .buttons{
     margin-top: 222px;
@@ -250,4 +251,14 @@
     border-color: #d9d9d9;
     border-radius: 2px;
     border-width: 1px;
+}
+.nameInput{
+    width: 150px;
+    height:auto;
+    background-color: transparent;
+    color: #f5f5f5;
+    border: none;
+    font-family: Montserrat;
+    font-size: 18px;
+    font-weight: 300;
 }
