--- a/yo_drive_client/src/App.css
+++ b/yo_drive_client/src/App.css
@@ -105,3 +105,20 @@ ul li {
 .rdrMonthAndYearWrapper {
   padding-top: 13px !important;
 }
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  /* box-shadow: inset 0 0 5px #9FA1A3; */
+  background: #9FA1A3;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #5A5C5E;
+  border-radius: 2px;
+}
