--- a/yo_drive_client/src/components/bookingPage/Popup/bookingPagePopup.module.css
+++ b/yo_drive_client/src/components/bookingPage/Popup/bookingPagePopup.module.css
@@ -58,3 +58,56 @@
   text-align: center;
   cursor: pointer;
 }
+
+.popupItem {
+  display: flex;
+  justify-content: space-between;
+}
+
+.popupCarImg {
+  margin-top: 60px;
+}
+
+.popupСarName {
+  margin: 47px 0 14px 0;
+}
+
+.popupDateRangeText, .popupDateRange, .popupSumCost, .popupSumCost {
+  font-family: Montserrat;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
+}
+
+.popupBookingInfo {
+  margin-top: -14px;
+  margin-left: 10px;
+  padding-bottom: 14px;
+}
+
+.popupDateRange {
+  margin-top: 4px;
+}
+
+.popupHighlight {
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 20px;
+}
+
+.popupCarAdress {
+  margin-top: 10px;
+  text-decoration: underline;
+  text-underline-offset: 2px;
+}
+
+.popupSumCost {
+  margin: 15px 0;
+}
+
+.popupHighlightCost {
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 24px;
+}
+
