поправил лк админа
поправил цвета кнопок превью и добавка, фильтр попап на селекты, все берется с бд, ну и теперь все нормально отправляется

--- a/yo_drive_client/src/components/privateOffice/office/filterPopUp.module.css
+++ b/yo_drive_client/src/components/privateOffice/office/filterPopUp.module.css
@@ -142,3 +142,16 @@
 .scndLineBlock{
     margin: 12px 0 0 6px;
 }
+select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none; 
+    width: 100%;
+  }
+  
+select::-ms-expand {
+   display: none; 
+}
+option:first {
+    color: #999;
+}
