--- a/yo_drive_client/src/components/privateOffice/office/office.module.css
+++ b/yo_drive_client/src/components/privateOffice/office/office.module.css
@@ -184,20 +184,11 @@
     font-family: Montserrat;
     font-size: 20px;
     font-weight: 300;
-    color: #212528;
-    border:none;
-    background-color: #d9d9d9;
+    border-radius: 2px;
+    border-style: none;
 }
 .buttonPrewiev:hover{
     cursor: pointer;
-}
-.buttonPrewiev:focus{
-    background-color: transparent;
-    color: #d9d9d9;
-    border-style: solid;
-    border-color: #d9d9d9;
-    border-radius: 2px;
-    border-width: 1px;
 }
 .filter{
     display: flex;
@@ -229,28 +220,12 @@
 .buttonAdd{
     width: 197px;
     height: 50px;
-    background-color: #d9d9d9;
     font-family: Montserrat;
     font-size: 20px;
-    color: #212528;
     font-weight: 300;
-    border: none;
 }
 .buttonAdd:hover{
-    background-color: #212528;
-    color: #d9d9d9;
-    border: #d9d9d9;
-    border-style: solid;
-    border-width: 1px;
     cursor: pointer;
-}
-.buttonAdd:focus{
-    background-color: transparent;
-    color: #d9d9d9;
-    border-style: solid;
-    border-color: #d9d9d9;
-    border-radius: 2px;
-    border-width: 1px;
 }
 .nameInput{
     width: 150px;
