--- a/yo_drive_client/src/components/header/header.module.css
+++ b/yo_drive_client/src/components/header/header.module.css
@@ -102,3 +102,9 @@
 .menuItem:hover{
     color: #a3a3a3;
 }
+.headIconUser{
+    width: 31px;
+    height: 31px;
+    border-radius: 100% ;
+    object-fit:cover;
+}
