--- a/yo_drive_client/src/components/privateOffice/office/officeAdmin.module.css
+++ b/yo_drive_client/src/components/privateOffice/office/officeAdmin.module.css
@@ -70,3 +70,11 @@
     width: 100%;
     justify-content: center;
 }
+.headIconUser{
+    width: 92px;
+    height: 92px;
+    border-radius: 100%;
+    object-fit:cover;
+    margin-top: 25px;
+    margin-left: 130px;
+}
