--- a/yo_drive_client/src/components/privateOffice/office/rentStory/story.module.css
+++ b/yo_drive_client/src/components/privateOffice/office/rentStory/story.module.css
@@ -224,7 +224,7 @@
 .calendarStyles::-webkit-calendar-picker-indicator {
     color: transparent;
     opacity: 1;
-    background: url(../../../assets/vectorLight.svg);
+    background: url(../../../../assets/vectorLight.svg);
     padding-bottom: 2px;
     padding-left: 5px;
     cursor: pointer;
